[package]
name = "ecs_engine"
version = "0.1.0"
authors = ["hoping <baihaoping@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.17", features = ["specs-derive"] }
lazy_static = "1.4.0"
libloading = "0.7.0"
codegen = { path = "codegen" }
log = "0.4"
fern = "0.6"
chrono = "0.4"
mio = { version = "0.7", features = ["net", "os-poll"] }
slab = "0.4"
rayon = "1.5"
protobuf = {path = "../protobuf/protobuf"}
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
derive_more = "0.99"
syn = "1.0"
quote = "1.0"
protobuf-codegen-pure = { path = "../protobuf/protobuf-codegen-pure" }

[workspace]
members = ["codegen"]