[package]
name = "ecs_engine"
version = "0.1.0"
authors = ["hoping <baihaoping@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

specs = { version = "0.16", features = ["specs-derive"] }
lazy_static = "1.4.0"
libloading = "0.7.0"
codegen = { path = "codegen" }
generator = { path = "generator" }
log = "0.4"
fern = "0.6"
chrono = "0.4"
mio = { version = "0.7", features = ["net", "os-poll"] }
slab = "0.4"
rayon = "1.5"
protobuf = { path = "../protobuf/protobuf" }



crossbeam = "0.8"
byteorder = "1.4"

cfg-if = "1.0"
notify = "4.0"
specs-hierarchy = "0.6"

[features]
debug = []

[workspace]
members = ["codegen", "generator"]