[package]
name = "generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4"
syn = "1.0"
quote = "1.0"
protobuf-codegen-pure = { path = "../../protobuf/protobuf-codegen-pure" }
byteorder = "1.4"
proc-macro2 = "1.0"
ron = "0.6"
serde = "1.0"
serde_derive = "1.0"
derive_more = "0.99"
md5 = "0.7"